[package]
name = "rust-wasm-simd128-example"
version = "0.1.0"
authors = ["Syrus <me@syrusakbary.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core_arch = "0.1.5"
core_arch = { path = "stdarch/crates/core_arch" }
